boinc (5.8.17-2) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * debian/control:
    - Extended boinc-manager's long description.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Mon, 30 Apr 2007 14:23:44 +0200

boinc (5.8.17-1) unstable; urgency=low

  [ Frank S. Thomas ]
  * New upstream release.
    - BOINC Manager:
      - Broadened "Options" dialog so that labels does not get truncated.
        (closes: #389840)
      - Display project names in "Reset Project" dialog correctly. (LP: #83708)
      - Fixed run mode entries in "Activity" menu. (LP: #93850)
  * debian/control:
    - Bumped versioned Build-Depends on libcurl3-openssl-dev to >= 7.15.5
      which is required for the bandwith-throttling feature. Also removed the
      alternative on libcurl-ssl-dev because this was only added to aid
      backporting BOINC to sarge but sarge has only libcurl3-dev/7.13.2.
    - Added libxml2-utils to Build-Depends for xmllint which is used in the
      unit-test target in debian/rules.
  * debian/rules:
    - Added the unit-test target which uses xmllint to check if the XML
      conffiles cc_config.xml and global_prefs_override.xml are well-formed.
    - Since backporting to sarge is not possible any more, also removed the
      compatibility code for sarge's version of dpkg-architecture.
    - On ppc64 use ppc64-linux-gnu as BOINC platform (which is the official
      BOINC platform) instead of powerpc64-unknown-linux-gnu.
  * Switched patch system from dpatch to quilt.
  * debian/patches/:
    - Updated 001_amd64_disable_platform_reset.patch for the new release.
    - Updated 003_use_sensible-browser.patch for the new release.
    - Added 101_gcc_4.3_fixes.patch that fixes a FTBFS with GCC 4.3, thanks to
      Martin Michlmayr <tbm@cyrius.com>. (closes: #413307)
  * debian/boinc-client.postinst: Change the permission and ownership of
    boinc-client's conffiles from 0644 boinc:boinc to 0640 root:boinc for