@@ -6,7 +6,7 @@ It was downloaded via CVS from alien.ssl.berkeley.edu.
 
 Upstream Authors: Dr. David P. Anderson <davea@ssl.berkeley.edu>
                   Rom Walton <rwalton@ssl.berkeley.edu>
-                  and others, see http://boinc.berkeley.edu/contact.php
+                  and others, see http://boinc.berkeley.edu/trac/wiki/ProjectPeople
 
 Copyright © 2002-2007 University of California at Berkeley
 
