@@ -15,7 +15,7 @@
 
   <!ENTITY dhgroupname "Debian BOINC Maintainers">
   <!ENTITY dhgroupmail "<email>pkg-boinc-devel@lists.alioth.debian.org</email>">
-  
+
   <!ENTITY dhbinary    "boinc_client">
   <!ENTITY dhdate      "<date>April 14, 2007</date>">
 
@@ -45,7 +45,7 @@
     <copyright>
       <year>2004</year>
       <holder>Steffen Moeller</holder>
-      
+
       <year>2005</year>
       <year>2006</year>
       <year>2007</year>
@@ -70,7 +70,7 @@
       <arg><replaceable>options</replaceable></arg>
     </cmdsynopsis>
   </refsynopsisdiv>
-  
+
   <refsect1>
     <title>DESCRIPTION</title>
     <para><command>&dhbinary;</command> starts a client for communication with
@@ -78,11 +78,11 @@
       interface to the BOINC client, use BOINC Manager. For a command-line
       interface to the BOINC client, use boinc_cmd.</para>
   </refsect1>
-  
+
   <refsect1>
     <title>OPTIONS</title>
     <para>A full summary of options is included below.</para>
-      
+
     <variablelist>
       <varlistentry>
         <term><option>-help</option></term>
@@ -90,7 +90,7 @@
           <para>show options</para>
         </listitem>
       </varlistentry>
-      
+
       <varlistentry>
         <term><option>-version</option></term>
         <listitem>
@@ -104,21 +104,21 @@
           <para>get/process/report work, then exit</para>
         </listitem>
       </varlistentry>
-      
+
       <varlistentry>
         <term><option>-show_projects</option></term>
         <listitem>
           <para>show attached projects</para>
         </listitem>
       </varlistentry>
-      
+
       <varlistentry>
         <term><option>-return_results_immediately</option></term>
         <listitem>
           <para>contact server when have results</para>
         </listitem>
       </varlistentry>
-      
+
       <varlistentry>
         <term>
           <option>-detach_project <replaceable>URL</replaceable></option>
@@ -127,7 +127,7 @@
           <para>detach from a project</para>
         </listitem>
       </varlistentry>
-      
+
       <varlistentry>
         <term>
           <option>-reset_project <replaceable>URL</replaceable></option>
@@ -136,7 +136,7 @@
           <para>reset (clear) a project</para>
         </listitem>
       </varlistentry>
-      
+
       <varlistentry>
         <term>
           <option>-attach_project <replaceable>URL</replaceable> 
@@ -146,7 +146,7 @@
           <para>attach to a project</para>
         </listitem>
       </varlistentry>
-      
+
       <varlistentry>
         <term>
           <option>-update_prefs <replaceable>URL</replaceable></option>
@@ -155,28 +155,28 @@
           <para>contact a project to update preferences</para>
         </listitem>
       </varlistentry>
-      
+
       <varlistentry>
         <term><option>-run_cpu_benchmarks</option></term>
         <listitem>
           <para>run the CPU benchmarks</para>
         </listitem>
       </varlistentry>
-      
+
       <varlistentry>
         <term><option>-check_all_logins</option></term>
         <listitem>
           <para>for idle detection, check remote logins too</para>
         </listitem>
       </varlistentry>
-      
+
       <varlistentry>
         <term><option>-allow_remote_gui_rpc</option></term>
         <listitem>
           <para>allow remote GUI RPC connections</para>
         </listitem>
       </varlistentry>
-      
+
       <varlistentry>
         <term>
           <option>-gui_rpc_port <replaceable>port</replaceable></option>
@@ -185,7 +185,7 @@
           <para>port for GUI RPCs</para>
         </listitem>
       </varlistentry>
-      
+
       <varlistentry>
         <term><option>-redirectio</option></term>
         <listitem>
@@ -199,7 +199,7 @@
           <para>use given dir as BOINC home</para>
         </listitem>
       </varlistentry>
-      
+
       <varlistentry>
         <term><option>-no_gui_rpc</option></term>
         <listitem>
@@ -225,13 +225,13 @@
       programs on the same host, which means that any user on this host can
       control the core client.</para>
   </refsect1>
-  
+
   <refsect1>
     <title>SEE ALSO</title>
-    <para><ulink url="http://boinc.berkeley.edu/client_unix.php"
-      >http://boinc.berkeley.edu/client_unix.php</ulink></para>
+    <para><ulink url="http://boinc.berkeley.edu/trac/wiki/UnixClient"
+      >http://boinc.berkeley.edu/trac/wiki/UnixClient</ulink></para>
   </refsect1>
-  
+
   <refsect1>
     <title>AUTHOR</title>
     <para>This manual page was written by the &dhgroupname; &dhgroupmail;
