@@ -3,8 +3,10 @@ boinc (5.8.17-2) UNRELEASED; urgency=low
   * NOT RELEASED YET
   * debian/control:
     - Extended boinc-manager's long description.
+  * Updated all BOINC URLs to point to their new location in the official
+    BOINC wiki according to http://boinc.berkeley.edu/trac/wiki/FileList.
 
- -- Frank S. Thomas <frank@thomas-alfeld.de>  Mon, 30 Apr 2007 14:23:44 +0200
+ -- Frank S. Thomas <frank@thomas-alfeld.de>  Mon, 30 Apr 2007 18:51:16 +0200
 
 boinc (5.8.17-1) unstable; urgency=low
 
